--- a/OpenGLCourseApp/OpenGLCourseApp.vcxproj
+++ b/OpenGLCourseApp/OpenGLCourseApp.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{c48effc6-3398-49c2-95c7-cec4be07772b}</ProjectGuid>
     <RootNamespace>OpenGLCourseApp</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>ModernOpenGL</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -139,7 +140,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="OpenGLCourseApp.cpp" />
+    <ClCompile Include="ModernOpenGL.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
