--- a/OpenGLCourseApp/OpenGLCourseApp.vcxproj.filters
+++ b/OpenGLCourseApp/OpenGLCourseApp.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="OpenGLCourseApp.cpp">
+    <ClCompile Include="ModernOpenGL.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
